# Oxygine_MagicParticles

MagicP/data/: res.xml
MagicP/data/particles/: effects.ptc
MagicP/proj.win32/: MagicP.sln  MagicP.vcxproj  MagicP.vcxproj.filters
MagicP/src/: example.cpp
oxygine-magicparticles/: .hg_archival.txt  .hgignore  Android.mk  CMakeLists.txt  oxygine-magicparticles.mkf  readme.txt
oxygine-magicparticles/example/MagicP/data/: res.xml
oxygine-magicparticles/example/MagicP/proj.android/: AndroidManifest.xml  build-run.bat  build-run.sh
oxygine-magicparticles/example/MagicP/proj.android/jni/src/: Android.mk
oxygine-magicparticles/example/MagicP/proj.android/res/layout/: main.xml
oxygine-magicparticles/example/MagicP/proj.android/res/values/: strings.xml
oxygine-magicparticles/example/MagicP/proj.android/src/org/oxygine/MagicP/: MainActivity.java
oxygine-magicparticles/example/MagicP/proj.cmake/: CMakeLists.txt
oxygine-magicparticles/example/MagicP/proj.win32/: MagicP.sln  MagicP.vcxproj  MagicP.vcxproj.filters
oxygine-magicparticles/src/: MagicEmitter.cpp  MagicEmitter.h  ResMagicParticles.cpp  ResMagicParticles.h
